--- a/src/transcription.css
+++ b/src/transcription.css
@@ -116,6 +116,7 @@ div {
   display: flex;
   gap: 25px;
   justify-content: center;
+  align-items: center;
 }
 
 .upload, .generate {
